--- a/.github/workflows/main_productcatalogueapp.yml
+++ b/.github/workflows/main_productcatalogueapp.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - productCatalogueApp
 
 on:
@@ -58,11 +55,9 @@ jobs:
         run: unzip release.zip
       
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BDF17BC2F29B4C95888027E7AEC8E18E }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_55AAC555F62E41FFBFCDB9CD126BC250 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8E5935A7FD0145578D9E78B145E688FD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -71,4 +66,3 @@ jobs:
           app-name: 'productCatalogueApp'
           slot-name: 'Production'
           package: .
-          
